slim not recomended

--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -1,6 +1,6 @@
 ---
 const { 
-    url="https://popmenucloud.com/cdn-cgi/image/width%3D1920%2Cheight%3D1920%2Cfit%3Dscale-down%2Cformat%3Dauto%2Cquality%3D60/skfezarw/4943eb58-db41-4123-a8d3-88116738df07.JPG",
+    url="images/gochuSaladBowl.png",
     spiceLevel = 3,
     itemNameJp = "ペッパーサラダペッパーサラダ",
     itemNameEn = "Gochu Salad", 
@@ -8,7 +8,6 @@ const {
     itemLikes = 2,
 } = Astro.props; 
 ---
-<!-- {# <link rel="preconnect" href="https://fonts.googleapis.com" /> #} -->
 <link
   rel="preconnect"
   href="https://fonts.gstatic.com"
