--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import MenuCard from '../components/MenuCard.astro';
+import MenuCardDetailed from '../components/MenuCardDetailed.astro';
+
 ---
 
 <!doctype html>
@@ -14,6 +16,7 @@ import MenuCard from '../components/MenuCard.astro';
 	<body>
 		<Header />
 		<main>
+			<MenuCardDetailed/>
 	     <MenuCard />
 		</main>
 		<Footer />
