--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
-import HoursHud from '../components/HoursHud.astro';
+import HoursHud from "../components/HoursHud.astro";
 ---
+
 <footer class="bg-background-900">
   <div class="pb-16 pt-4 sm:pt-10 lg:pt-12">
     <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
@@ -9,14 +10,14 @@ import HoursHud from '../components/HoursHud.astro';
       >
         <div class="col-span-full lg:col-span-2">
           <!-- logo - start -->
-          <div class="mb-1 lg:-mt-2 w-full bg-black/20 rounded pl-3 pb-2">
+          <div class="mb-1 w-full rounded bg-black/20 pb-2 pl-3 lg:-mt-2">
             <a
               href="/"
-              class="text-xl font-bold text-gray-100 md:text-2xl "
+              class="text-xl font-bold text-gray-100 md:text-2xl"
               aria-label="logo"
             >
-              <span class="block text-primary-300 text-3xl">Koushinryou</span>
-              <span class="block text-accent-200 text-xl">香辛料</span>
+              <span class="block text-3xl text-primary-300">Koushinryou</span>
+              <span class="block text-xl text-accent-200">香辛料</span>
             </a>
           </div>
           <!-- logo - end -->
@@ -27,7 +28,7 @@ import HoursHud from '../components/HoursHud.astro';
           <div class="mb-1 font-bold uppercase tracking-widest text-accent-300">
             Company
           </div>
-          <nav class="flex flex-col gap-4 items-left">
+          <nav class="items-left flex flex-col gap-4">
             <div>
               <a
                 href="/contact.html"
@@ -51,7 +52,7 @@ import HoursHud from '../components/HoursHud.astro';
           <div class="mb-1 font-bold uppercase tracking-widest text-accent-300">
             Support
           </div>
-          <nav class="flex flex-col gap-4 items-left">
+          <nav class="items-left flex flex-col gap-4">
             <div>
               <a
                 href="/contact.html"
@@ -75,7 +76,7 @@ import HoursHud from '../components/HoursHud.astro';
           <div class="mb-1 font-bold uppercase tracking-widest text-accent-300">
             Legal
           </div>
-          <nav class="flex flex-col gap-4 items-left">
+          <nav class="items-left flex flex-col gap-4">
             <div>
               <a
                 href="#"
@@ -98,13 +99,13 @@ import HoursHud from '../components/HoursHud.astro';
           <div class="mb-1 font-bold uppercase tracking-widest text-accent-300">
             Social
           </div>
-          <nav class="flex gap-4 justify-left">
+          <nav class="justify-left flex gap-4">
             <div>
               <a
                 href="https://www.facebook.com/people/Koushinryou/100027534056280/"
                 class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
               >
-               <img src="assets/facebook.svg" class="size-5"  />
+                <img src="assets/facebook.svg" class="size-5" />
               </a>
             </div>
             <div>
@@ -112,35 +113,37 @@ import HoursHud from '../components/HoursHud.astro';
                 href="https://www.instagram.com/koushinryoujax/"
                 class="text-gray-100 transition duration-100 hover:text-indigo-500 active:text-indigo-600"
               >
-               <img src="assets/instagram.svg" class="size-5" />
-                
+                <img src="assets/instagram.svg" class="size-5" />
               </a>
             </div>
             <div
-              class="text-gray-100 transition duration-100 hover:text-gray-500 active:text-gray-600 cursor-pointer"
+              class="cursor-pointer text-gray-100 transition duration-100 hover:text-gray-500 active:text-gray-600"
               onclick="copyText()"
             >
-               <object data="assets/email.svg" class="size-5 stroke-white fill-transparent" /></object>
-              
-              <span id="emailText" class="hidden">Copied</span>
-              <div id="copyTarget" class="hidden">Koushinryou22@gmail.com</div>
+              <object
+                data="assets/email.svg"
+                class="size-5 fill-transparent stroke-white"></object>
             </div>
+
+            <span id="emailText" class="hidden">Copied</span>
+            <div id="copyTarget" class="hidden">Koushinryou22@gmail.com</div>
           </nav>
         </div>
-        <!-- nav - end -->
       </div>
-    </div>
-  </div>
-  <div class="bg-background-950">
-    <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
-      <div class="flex items-left justify-between gap-4 py-8">
-        <span class="text-sm text-gray-400">
-          © 2023 - Koushinryou. All rights reserved.
-        </span>
-      </div>
+      <!-- nav - end -->
     </div>
   </div>
 </footer>
+<div class="bg-background-950">
+  <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
+    <div class="items-left flex justify-between gap-4 py-8">
+      <span class="text-sm text-gray-400">
+        © 2023 - Koushinryou. All rights reserved.
+      </span>
+    </div>
+  </div>
+</div>
+
 <script>
   function copyText() {
     const copyText = document.getElementById("copyTarget").innerText;
