--- a/src/components/HoursHud.astro
+++ b/src/components/HoursHud.astro
@@ -1,22 +1,33 @@
 ---
 const data = [
-  { day: 'Monday', open: false, reason: 'Holiday' },
-  { day: 'Tuesday', open: true },
-  { day: 'Wednesday', open: false },
-  { day: 'Thursday', open: false, reason: 'Holiday' },
+  { day: "Monday", open: false, reason: "Holiday" },
+  { day: "Tuesday", open: true },
+  { day: "Wednesday", open: false },
+  { day: "Thursday", open: false, reason: "Holiday" },
 ];
 ---
 
-<div class="grid grid-cols-4 gap-1 overflow-hidden rounded-sm capitalize leading-none [&>div>div]:p-1">
-
-  {data.map((item, index) => (
-    <div >
-      <div class="border-y-4 border-neutral-800 bg-yellow-800 font-semibold leading-tight text-white">{item.day}</div>
-      <div class={`h-full ${item.open ? 'bg-teal-700 text-green-300' : 'bg-orange-700 text-orange-300'} text-lg`}>
-        <span class="block">{item.open ? 'Open' : 'Closed'}</span>
-        {item.open && <span class="pr-3 text-sm font-medium italic">9am ~ 5pm</span>}
-        {!item.open && item.reason && <span class="block text-sm">{item.reason}</span>}
+<div
+  class="grid grid-cols-4 gap-1 overflow-hidden rounded-sm capitalize leading-none [&>div>div]:p-1"
+>
+  {
+    data.map((item, index) => (
+      <div>
+        <div class="border-y-4 border-neutral-800 bg-yellow-800 font-semibold leading-tight text-white">
+          {item.day}
+        </div>
+        <div
+          class={`h-full ${item.open ? "bg-teal-700 text-green-300" : "bg-orange-700 text-orange-300"} text-lg`}
+        >
+          <span class="block">{item.open ? "Open" : "Closed"}</span>
+          {item.open && (
+            <span class="pr-3 text-sm font-medium italic">9am ~ 5pm</span>
+          )}
+          {!item.open && item.reason && (
+            <span class="block text-sm">{item.reason}</span>
+          )}
+        </div>
       </div>
-    </div>
-  ))}
+    ))
+  }
 </div>
