--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,23 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import MenuCard from '../components/MenuCard.astro';
-import MenuCardDetailed from '../components/MenuCardDetailed.astro';
-
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import MenuCard from "../components/MenuCard.astro";
+import MenuCardDetailed from "../components/MenuCardDetailed.astro";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<MenuCardDetailed/>
-	     <MenuCard />
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <Header />
+    <main>
+      <MenuCardDetailed />
+      <MenuCard />
+    </main>
+    <Footer />
+  </body>
 </html>
