--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -1,13 +1,14 @@
 ---
-const { 
-    url="images/gochuSaladBowl.png",
-    spiceLevel = 3,
-    itemNameJp = "ペッパーサラダペッパーサラダ",
-    itemNameEn = "Gochu Salad", 
-    itemPrice = "$6.99",
-    itemLikes = 2,
-} = Astro.props; 
+const {
+  url = "images/gochuSaladBowl.png",
+  spiceLevel = 3,
+  itemNameJp = "ペッパーサラダペッパーサラダ",
+  itemNameEn = "Gochu Salad",
+  itemPrice = "$6.99",
+  itemLikes = 2,
+} = Astro.props;
 ---
+
 <link
   rel="preconnect"
   href="https://fonts.gstatic.com"
@@ -24,48 +25,46 @@ const {
     alt={itemNameEn}
   />
   <div
-    class="absolute right-0 top-0 z-10 flex h-full flex-col content-center bg-gradient-to-l from-black/80 from-50% text-white
-      sm:text-xl"
+    class="absolute right-0 top-0 z-10 flex h-full flex-col content-center bg-gradient-to-l from-black/80 from-50% text-white sm:text-xl"
   >
     <div
-      class="relative flex items-center justify-center outline-4 outline-neutral-500 pt-4"
+      class="relative flex items-center justify-center pt-4 outline-4 outline-neutral-500"
     >
-    { !(spiceLevel == 0) &&
-        
-      <div id="fire" class="relative grid size-10 place-items-center">
-        <svg
-          class="z-0 h-full w-full"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          aria-label="Fire icon with number 3"
-        >
-          <path
-            class="fill-red-600"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1
+      {
+        !(spiceLevel == 0) && (
+          <div id="fire" class="relative grid size-10 place-items-center">
+            <svg
+              class="z-0 h-full w-full"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              aria-label="Fire icon with number 3"
+            >
+              <path
+                class="fill-red-600"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1
               3.361-6.867 8.21 8.21 0 0 0 3 2.48Z"
-          />
-          <!-- Circle background for the number -->
-          <circle cx="14" cy="14" r="5.5" class="fill-red-900" />
-          <!-- Number text -->
-          <text
-            x="14"
-            y="15"
-            class="z-10 fill-white text-[0.65rem] font-bold"
-            text-anchor="middle"
-            dominant-baseline="middle"
-          >
-            {spiceLevel}
-          </text>
-        </svg>
-      </div>
+              />
+              <circle cx="14" cy="14" r="5.5" class="fill-red-900" />
+              <text
+                x="14"
+                y="15"
+                class="z-10 fill-white text-[0.65rem] font-bold"
+                text-anchor="middle"
+                dominant-baseline="middle"
+              >
+                {spiceLevel}
+              </text>
+            </svg>
+          </div>
+        )
       }
     </div>
     <!-- Japanese Text with Manual Line Break -->
     <p class="upright jp m-2 max-h-48 max-w-36 text-gray-300 sm:text-xl">
-    {itemNameJp}
+      {itemNameJp}
     </p>
   </div>
   <div
@@ -77,20 +76,19 @@ const {
     <div class="flex flex-row items-center gap-2">
       <span class="mt-1 inline-block pr-2 text-xl leading-snug text-green-300">
         {itemPrice}
-        </span>
+      </span>
       <div class="flex flex-row items-center">
-        { !(itemLikes == 0) &&
-        <span
-          class="mt-1 rounded-full pr-2 text-sm leading-snug text-yellow-300"
-        >
-          <svg
-            class="inline-block h-5 w-5"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-          >
-            <path
-              d="M7.493 18.5c-.425 0-.82-.236-.975-.632A7.48 7.48 0 0 1 6 15.125c0-1.75.599-3.358
+        {
+          !(itemLikes == 0) && (
+            <span class="mt-1 rounded-full pr-2 text-sm leading-snug text-yellow-300">
+              <svg
+                class="inline-block h-5 w-5"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M7.493 18.5c-.425 0-.82-.236-.975-.632A7.48 7.48 0 0 1 6 15.125c0-1.75.599-3.358
             1.602-4.634.151-.192.373-.309.6-.397.473-.183.89-.514 1.212-.924a9.042 9.042 0 0 1 2.861-2.4c.723-.384 1.35-.956
             1.653-1.715a4.498 4.498 0 0 0 .322-1.672V2.75A.75.75 0 0 1 15 2a2.25 2.25 0 0 1 2.25 2.25c0 1.152-.26 2.243-.723
             3.218-.266.558.107 1.282.725 1.282h3.126c1.026 0 1.945.694 2.054 1.715.045.422.068.85.068 1.285a11.95 11.95 0 0 1-2.649
@@ -98,10 +96,11 @@ const {
             10.727a11.969 11.969 0 0 0-.831 4.398 12 12 0 0 0 .52 3.507C2.28 19.482 3.105 20 3.994 20H4.9c.445 0
             .72-.498.523-.898a8.963 8.963 0 0 1-.924-3.977c0-1.708.476-3.305 1.302-4.666.245-.403-.028-.959-.5-.959H4.25c-.832
             0-1.612.453-1.918 1.227Z"
-            />
-          </svg>
-          <span>{itemLikes}</span>
-        </span>
+                />
+              </svg>
+              <span>{itemLikes}</span>
+            </span>
+          )
         }
       </div>
     </div>
