--- a/src/components/Specials.astro
+++ b/src/components/Specials.astro
@@ -12,8 +12,20 @@ import MenuCard from "./MenuCard.astro";
       Specials
     </h2>
     <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-6">
-      <MenuCard />
-      <MenuCard />
+      <MenuCard
+        url="images/kotsudonSando.png"
+        spiceLevel="0"
+        itemPrice="$10.99"
+        itemNameEn="Kotsudon Sando"
+        itemLikes="10"
+      />
+      <MenuCard
+        url="images/akaMisoSoup.png"
+        spiceLevel="0"
+        itemPrice="$4.99"
+        itemNameEn="Aka Miso Soup"
+        itemLikes="5"
+      />
       <MenuCard />
     </div>
   </div>
