--- a/src/components/Sizzle.astro
+++ b/src/components/Sizzle.astro
@@ -1,4 +1,5 @@
 ---
+import Button from "./micro/Button.astro";
 let {
   videoUrl = "https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=https%3A%2F%2Fkoushinryou.secrist.xyz&widgetid=1",
   videoTitle = "YouTube Developers Live: Embedded Web Player Customization",
@@ -8,19 +9,17 @@ let {
 <div class="mx-auto max-w-screen-2xl bg-background-900 px-4 py-10 md:px-8">
   <div class="mx-4 grid gap-2 sm:grid-cols-1 md:grid-cols-2">
     <div
-      class="relative box-border flex h-96 items-end rounded-lg bg-background-800 shadow-lg"
+      class="relative box-border flex h-96 items-end rounded-lg bg-background-800 shadow-lg overflow-hidden"
       id="ytplayer"
     >
       <iframe
-        class="relative box-border flex h-96 items-end rounded-lg bg-background-800 shadow-lg"
+        class="absolute top-0 left-0 w-full h-full rounded-lg"
         id="ytplayer"
         loading="lazy"
         allowfullscreen=""
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin"
         title={videoTitle}
-        width="100%"
-        height="100%"
         src={videoUrl}
       >
       </iframe>
@@ -28,24 +27,18 @@ let {
     <div
       class="relative flex h-96 flex-col rounded-lg bg-background-700 p-4 shadow-lg"
     >
-      <div class="relative flex w-full flex-grow">
+      <div class="relative flex w-full flex-grow overflow-auto">
         <div class="flex-grow">
           <slot />
         </div>
       </div>
-      <div class="relative flex w-full flex-row">
-        <a
-          href="/menu.html"
-          class="mr-2 inline-block rounded-lg bg-primary-500 px-4 py-2 text-center text-xs font-semibold text-white outline-none ring-indigo-300 transition duration-100 hover:bg-primary-600 focus-visible:ring active:bg-primary-700 md:text-base"
-        >
-          Menu</a
-        >
-        <a
-          href="/faq.html"
-          class="inline-block rounded-lg bg-accent-600 px-4 py-2 text-center text-xs font-semibold text-white outline-none ring-accent-300 transition duration-100 hover:bg-accent-700 focus-visible:ring active:bg-accent-700 md:text-base"
-        >
-          FAQ</a
-        >
+      <div class="relative flex w-full flex-row gap-2 mt-4">
+        <Button href="menu" class="bg-primary-500 hover:bg-primary-600">
+          Menu
+        </Button>
+        <Button href="faq" class="bg-accent-500 hover:bg-accent-600">
+          FAQ
+        </Button>
       </div>
     </div>
   </div>
