--- a/src/components/micro/Button.astro
+++ b/src/components/micro/Button.astro
@@ -6,7 +6,7 @@ let { class: className, href = "" } = Astro.props;
   href={href}
   class:list={[
     className,
-    "inline-block rounded-lg px-4 py-2 text-center text-xs font-semibold text-white outline-none ring-indigo-300 transition duration-100  focus-visible:ring active:bg-primary-700 md:text-base",
+    "inline-block rounded-lg px-4 py-2 text-center text-base font-semibold text-white outline-none ring-indigo-300 transition duration-100 focus-visible:ring ",
   ]}
 >
   <slot />
