--- a/src/components/HoursHud.astro
+++ b/src/components/HoursHud.astro
@@ -11,7 +11,7 @@ const data = [
   class="grid grid-cols-4 gap-1 overflow-hidden rounded-sm capitalize leading-none [&>div>div]:p-1"
 >
   {
-    data.map((item, index) => (
+    data.map((item) => (
       <div>
         <div class="border-y-4 border-neutral-800 bg-yellow-800 font-semibold leading-tight text-white">
           {item.day}
